[gd_scene load_steps=3 format=3 uid="uid://du5i0mh3mkwuq"]

[ext_resource type="Script" path="res://game/hack_scene.gd" id="1_jk2s7"]
[ext_resource type="Script" path="res://game/player/player_hack_controller.gd" id="2_qo8v3"]

[node name="TestHackScene" type="CanvasLayer"]
script = ExtResource("1_jk2s7")

[node name="PlayerHackController" type="Node" parent="."]
script = ExtResource("2_qo8v3")

[node name="succeed" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -63.5
offset_right = 62.0
offset_bottom = -32.5
grow_horizontal = 2
grow_vertical = 2
text = "Succeed hack"

[node name="fail" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -15.5
offset_right = 62.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Fail hack"

[node name="cancel" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 32.5
offset_right = 50.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
text = "Cancel hack"

[connection signal="button_down" from="succeed" to="." method="_on_success"]
[connection signal="button_down" from="fail" to="." method="_on_fail"]
[connection signal="button_down" from="cancel" to="." method="_on_cancel"]
